platform/cd/dotnet-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  labels:
    app: dotnet-service
spec:
  selector:
    app: dotnet-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
